Bug 874321 - Fix setting of expandos on Xrays for DOM bindings with named properties. r=bz.

--HG--
extra : rebase_source : 697545417d27696de05c0f22987e4cb187d226cd