dom/bindings/BindingUtils.cpp
@@ -1033,6 +1033,21 @@ XrayResolveNativeProperty(JSContext* cx, JS::Handle<JSObject*> wrapper,
 }
 
 bool
+XrayDefineProperty(JSContext* cx, JS::Handle<JSObject*> wrapper,
+                   JS::Handle<JSObject*> obj, JS::Handle<jsid> id,
+                   JSPropertyDescriptor* desc, bool* defined)
+{
+  if (!js::IsProxy(obj))
+      return true;
+
+  MOZ_ASSERT(IsDOMProxy(obj), "What kind of proxy is this?");
+
+  DOMProxyHandler* handler =
+    static_cast<DOMProxyHandler*>(js::GetProxyHandler(obj));
+  return handler->defineProperty(cx, wrapper, id, desc, defined);
+}
+
+bool
 XrayEnumerateAttributes(JSContext* cx, JS::Handle<JSObject*> wrapper,
                         JS::Handle<JSObject*> obj,
                         const Prefable<const JSPropertySpec>* attributes,
